# kedro-geospatial-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt  stats.json
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_general_preprocessing.yml
src/demo/: __init__.py  __main__.py  settings.py
src/demo/datasets/: xarray_dataset.py
src/demo/pipelines/preprocessing/: __init__.py  nodes.py  pipeline.py
src/tests/pipelines/general_preprocessing/: test_pipeline.py
src/tests/pipelines/preprocessing/: test_nodes.py
